--- a/templates/app/accessibility.html.twig
+++ b/templates/app/accessibility.html.twig
@@ -15,7 +15,7 @@
 
 	<div class="container">
 		<p>
-			Nous nous engageons à rendre notre plateforme de partage de documents en ligne accessible à tous. Pour ce faire, nous veillons à ce que notre plateforme respecte les normes d'accessibilité du Web Content Accessibility Guidelines (WCAG) 2.1. Nous surveillons régulièrement notre plateforme pour détecter les problèmes d'accessibilité et nous nous efforçons de résoudre ces problèmes dès qu'ils sont identifiés. Si vous rencontrez un problème d'accessibilité sur notre plateforme, veuillez nous contacter afin que nous puissions résoudre le problème.
+			Nous nous engageons à rendre notre plateforme de partage de documents en ligne PartageProf accessible à tous. Pour ce faire, nous veillons à ce que notre plateforme respecte les normes d'accessibilité du Web Content Accessibility Guidelines (WCAG) 2.1. Nous surveillons régulièrement notre plateforme pour détecter les problèmes d'accessibilité et nous nous efforçons de résoudre ces problèmes dès qu'ils sont identifiés. Si vous rencontrez un problème d'accessibilité sur notre plateforme, veuillez nous contacter afin que nous puissions résoudre le problème.
 		</p>
 		<p>
 			En outre, nous nous engageons à rendre notre contenu pédagogique accessible à tous. Nous travaillons constamment à améliorer l'interface utilisateur de notre plateforme pour une navigation plus intuitive et une meilleure expérience utilisateur. Nous sommes également conscients de l'importance de la compatibilité avec les technologies d'assistance, comme les lecteurs d'écran, et nous nous efforçons de garantir que notre plateforme fonctionne efficacement avec ces outils.
