Update routes and templates for admin controllers

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -51,19 +51,19 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="{{ path('admin_level_read') }}" class="nav-link">
 						<i class="fa-duotone fa-dial-med-low me-2"></i>
 						<span class="hidden-mobile">Niveaux</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="{{ path('admin_subject_read') }}" class="nav-link">
 						<i class="fa-duotone fa-typewriter me-2"></i>
 						<span class="hidden-mobile">Matières</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="{{ path('admin_theme_read') }}" class="nav-link">
 						<i class="fa-duotone fa-sitemap me-2"></i>
 						<span class="hidden-mobile">Thématiques</span>
 					</a>
