Fix ManyToMany relationship mappings and add new validator and form type

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -70,7 +70,7 @@
 				</li>
 				<hr>
 				<li class="nav-item">
-					<a href="#" class="nav-link">
+					<a href="{{ path('admin_user_read') }}" class="nav-link">
 						<i class="fa-duotone fa-users me-2"></i>
 						<span class="hidden-mobile">Utilisateurs</span>
 					</a>
