Update .gitignore and .env files, delete unnecessary JavaScript files, and update footer links in templates

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -51,19 +51,19 @@
 			<div class="bar"></div>
 		</div>
 		<div class="d-flex justify-content-around align-items-center w-100 fs-1">
-			<a href="#" target="_blank" title="Facebook" class="footer-link">
+			<a href="https://www.facebook.com/profile.php?id=61558958707802" target="_blank" title="Facebook" class="footer-link">
 				<i class="fa-brands fa-facebook-f"></i>
 			</a>
-			<a href="#" target="_blank" title="Twitter" class="footer-link">
+			<a href="https://twitter.com/PartageProf" target="_blank" title="Twitter" class="footer-link">
 				<i class="fa-brands fa-x-twitter"></i>
 			</a>
-			<a href="#" target="_blank" title="Youtube" class="footer-link">
+			<a href="https://www.youtube.com/@PartageProf" target="_blank" title="Youtube" class="footer-link">
 				<i class="fa-brands fa-youtube"></i>
 			</a>
 			<a href="https://discord.gg/UuHvgnFYew" target="_blank" title="Discord" class="footer-link">
 				<i class="fa-brands fa-discord"></i>
 			</a>
-			<a href="#" target="_blank" title="Instagram" class="footer-link">
+			<a href="https://www.instagram.com/partageprof1/" target="_blank" title="Instagram" class="footer-link">
 				<i class="fa-brands fa-instagram"></i>
 			</a>
 		</div>
